--- a/Learning_Testng/test-output/emailable-report.html
+++ b/Learning_Testng/test-output/emailable-report.html
@@ -9,17 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">2</td><td class="num">9,269</td><td></td><td></td></tr>
+<tr><td><a href="#t0">chrome</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">3,189</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">edge</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">5,787</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">8,976</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="2">listener.FbTest</td><td><a href="#m0">logincheck</a></td><td rowspan="1">1684119536167</td><td rowspan="1">4891</td></tr><tr class="failedeven"><td><a href="#m1">titleCheck</a></td><td rowspan="1">1684119532110</td><td rowspan="1">3853</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">parallel.LoginTest</td><td><a href="#m0">test</a></td><td rowspan="1">1684204111246</td><td rowspan="1">3126</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">edge &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">parallel.LoginTest</td><td><a href="#m1">test</a></td><td rowspan="1">1684204114445</td><td rowspan="1">5783</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">listener.FbTest#logincheck</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>org.testng.TestRunner@5c671d7f</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [fb] but found [Facebook – log in or sign up]
-	at listener.FbTest.logincheck(FbTest.java:30)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 33 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">listener.FbTest#titleCheck</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>org.testng.TestRunner@5c671d7f</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [FB] but found [Facebook – log in or sign up]
-	at listener.FbTest.titleCheck(FbTest.java:19)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 33 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>chrome</h2><h3 id="m0">parallel.LoginTest#test</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>chrome</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>edge</h2><h3 id="m1">parallel.LoginTest#test</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>edge</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
