--- a/Learning_Testng/test-output/index.html
+++ b/Learning_Testng/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 2 failed tests</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Suite" class="navigator-link">
-              <span class="suite-name border-failed">Suite</span>
+              <span class="suite-name border-passed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -50,12 +50,12 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>D:\workspace\Java\Selenium-Purva\Learning_Testng\fblistener.xml</span>
+                    <span>D:\workspace\Java\Selenium-Purva\Learning_Testng\parallel.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
                   <a href="#" panel-name="testlist-Suite" class="navigator-link ">
-                    <span class="test-stats">1 test</span>
+                    <span class="test-stats">2 tests</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,26 +92,26 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods, 2 failed,   </span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Suite" class="hide-methods failed suite-Suite"> (hide)</a> <!-- hide-methods failed suite-Suite -->
-                      <a href="#" panel-name="suite-Suite" class="show-methods failed suite-Suite"> (show)</a> <!-- show-methods failed suite-Suite -->
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-Suite" class="hide-methods passed suite-Suite"> (hide)</a> <!-- hide-methods passed suite-Suite -->
+                      <a href="#" panel-name="suite-Suite" class="show-methods passed suite-Suite"> (show)</a> <!-- show-methods passed suite-Suite -->
                     </span>
-                    <div class="method-list-content failed suite-Suite">
+                    <div class="method-list-content passed suite-Suite">
                       <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="listener.FbTest" class="method navigator-link" hash-for-method="logincheck(org.testng.TestRunner@5c671d7f)">logincheck(org.testng.TestRunner@5c671d7f)</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="parallel.LoginTest" class="method navigator-link" hash-for-method="test(chrome)">test(chrome)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="listener.FbTest" class="method navigator-link" hash-for-method="titleCheck(org.testng.TestRunner@5c671d7f)">titleCheck(org.testng.TestRunner@5c671d7f)</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="parallel.LoginTest" class="method navigator-link" hash-for-method="test(edge)">test(edge)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content failed suite-Suite -->
+                    </div> <!-- method-list-content passed suite-Suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -123,58 +123,52 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
-          <div class="suite-Suite-class-failed">
+          <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">listener.FbTest</span>
+              <img src="passed.png"/>
+              <span class="class-name">parallel.LoginTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="logincheck(org.testng.TestRunner@5c671d7f)">
-                  </a> <!-- logincheck(org.testng.TestRunner@5c671d7f) -->
-                  <span class="method-name">logincheck</span>
-                  <span class="parameters">(org.testng.TestRunner@5c671d7f)</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [fb] but found [Facebook – log in or sign up]
-	at listener.FbTest.logincheck(FbTest.java:30)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 33 stack frames
-</div> <!-- stack-trace -->
+                  <a name="test(chrome)">
+                  </a> <!-- test(chrome) -->
+                  <span class="method-name">test</span>
+                  <span class="parameters">(chrome)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="titleCheck(org.testng.TestRunner@5c671d7f)">
-                  </a> <!-- titleCheck(org.testng.TestRunner@5c671d7f) -->
-                  <span class="method-name">titleCheck</span>
-                  <span class="parameters">(org.testng.TestRunner@5c671d7f)</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [FB] but found [Facebook – log in or sign up]
-	at listener.FbTest.titleCheck(FbTest.java:19)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 33 stack frames
-</div> <!-- stack-trace -->
+                  <a name="test(edge)">
+                  </a> <!-- test(edge) -->
+                  <span class="method-name">test</span>
+                  <span class="parameters">(edge)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-failed -->
+          </div> <!-- suite-Suite-class-passed -->
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\workspace\Java\Selenium-Purva\Learning_Testng\fblistener.xml</span>
+            <span class="header-content">D:\workspace\Java\Selenium-Purva\Learning_Testng\parallel.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
-  &lt;listeners&gt;
-    &lt;listener class-name=&quot;listener.FbListener&quot;/&gt;
-  &lt;/listeners&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;chrome&quot;&gt;
+    &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;listener.FbTest&quot;/&gt;
+      &lt;class name=&quot;parallel.LoginTest&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Test --&gt;
+  &lt;/test&gt; &lt;!-- chrome --&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;edge&quot;&gt;
+    &lt;parameter name=&quot;browser&quot; value=&quot;edge&quot;/&gt;
+    &lt;classes&gt;
+      &lt;class name=&quot;parallel.LoginTest&quot;/&gt;
+    &lt;/classes&gt;
+  &lt;/test&gt; &lt;!-- edge --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -186,7 +180,10 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (1 class)</span>
+                <span class="test-name">chrome (1 class)</span>
+              </li>
+              <li>
+                <span class="test-name">edge (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -214,13 +211,13 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'logincheck')
-data.setCell(0, 2, 'listener.FbTest')
-data.setCell(0, 3, 4891);
+data.setCell(0, 1, 'test')
+data.setCell(0, 2, 'parallel.LoginTest')
+data.setCell(0, 3, 5783);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'titleCheck')
-data.setCell(1, 2, 'listener.FbTest')
-data.setCell(1, 3, 3853);
+data.setCell(1, 1, 'test')
+data.setCell(1, 2, 'parallel.LoginTest')
+data.setCell(1, 3, 3126);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
@@ -251,18 +248,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">listener.FbTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">parallel.LoginTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">titleCheck(org.testng.TestRunner@5c671d7f)</span>
+                <span class="method-name">test(chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">logincheck(org.testng.TestRunner@5c671d7f)</span>
-                <span class="method-start">4057 ms</span>
+                <span class="method-name">test(edge)</span>
+                <span class="method-start">3199 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
