--- a/Learning_Testng/test-output/old/Suite/methods-alphabetical.html
+++ b/Learning_Testng/test-output/old/Suite/methods-alphabetical.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b9f197">  <td>23/05/15 08:28:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FbTest.logincheck(org.testng.ITestContext)[pri:2, instance:listener.FbTest@4cc451f2]">logincheck</td> 
-  <td>main@1261153343</td>   <td></td> </tr>
-<tr bgcolor="b9f197">  <td>23/05/15 08:28:52</td>   <td>-4058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FbTest.titleCheck(org.testng.ITestContext)[pri:1, instance:listener.FbTest@4cc451f2]">titleCheck</td> 
-  <td>main@1261153343</td>   <td></td> </tr>
+<tr bgcolor="a3a2c2">  <td>23/05/16 07:58:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.test(java.lang.String)[pri:0, instance:parallel.LoginTest@6b81ce95]">test</td> 
+  <td>main@807752428</td>   <td></td> </tr>
+<tr bgcolor="a3a2c2">  <td>23/05/16 07:58:34</td>   <td>3200</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.test(java.lang.String)[pri:0, instance:parallel.LoginTest@128d2484]">test</td> 
+  <td>main@807752428</td>   <td></td> </tr>
 </table>
